--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -4182,41 +4182,57 @@ body h1, body h2, body h3, body h4, body h5, body h6, body .h1, body .h2, body .
 body h1.sub, body h1.subheading, body h1 > small, body h1 > .small, body h2.sub, body h2.subheading, body h2 > small, body h2 > .small, body h3.sub, body h3.subheading, body h3 > small, body h3 > .small, body h4.sub, body h4.subheading, body h4 > small, body h4 > .small, body h5.sub, body h5.subheading, body h5 > small, body h5 > .small, body h6.sub, body h6.subheading, body h6 > small, body h6 > .small, body .h1.sub, body .h1.subheading, body .h1 > small, body .h1 > .small, body .h2.sub, body .h2.subheading, body .h2 > small, body .h2 > .small, body .h3.sub, body .h3.subheading, body .h3 > small, body .h3 > .small, body .h4.sub, body .h4.subheading, body .h4 > small, body .h4 > .small, body .h5.sub, body .h5.subheading, body .h5 > small, body .h5 > .small, body .h6.sub, body .h6.subheading, body .h6 > small, body .h6 > .small {
   color: #525252;
 }
-/* line 73, ../scss/modules/type/_themes.scss */
+/* line 86, ../scss/modules/type/_themes.scss */
 a {
   text-decoration: underline;
 }
-/* line 76, ../scss/modules/type/_themes.scss */
+/* line 89, ../scss/modules/type/_themes.scss */
 a:hover {
   text-decoration: underline;
 }
-/* line 80, ../scss/modules/type/_themes.scss */
+/* line 93, ../scss/modules/type/_themes.scss */
 a > img {
   border: none;
 }
 
-/* line 86, ../scss/modules/type/_themes.scss */
+/* line 99, ../scss/modules/type/_themes.scss */
 a, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, .light.alert a, .warning.alert a {
   color: #024959;
 }
-/* line 90, ../scss/modules/type/_themes.scss */
-a:hover, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, .light.alert a:hover, .warning.alert a:hover, a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, .light.alert a:focus, .warning.alert a:focus, a:active, nav li > a:active:hover, .nav li > a:active:hover, nav.light li > a:active:hover, .light.dropdown-container > .dropdown li > a:active:hover, .light.alert a:active, .warning.alert a:active {
+/* line 81, ../scss/modules/type/_themes.scss */
+a:hover, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, .light.alert a:hover, .warning.alert a:hover {
   color: #013540;
 }
-/* line 95, ../scss/modules/type/_themes.scss */
+/* line 82, ../scss/modules/type/_themes.scss */
+a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, .light.alert a:focus, .warning.alert a:focus {
+  color: #013540;
+}
+/* line 83, ../scss/modules/type/_themes.scss */
+a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, .light.alert a:focus, .warning.alert a:focus {
+  color: #013540;
+}
+/* line 104, ../scss/modules/type/_themes.scss */
 nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover, .alert a, .primary.alert a, .secondary.alert a, .dark.alert a, .success.alert a, .failure.alert a {
   color: #efefef;
 }
-/* line 98, ../scss/modules/type/_themes.scss */
-nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover, .alert a:hover, nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover, .alert a:focus, nav.primary li > a:active:hover, .primary.nav li > a:active:hover, nav.secondary li > a:active:hover, .secondary.nav li > a:active:hover, nav.dark li > a:active:hover, .dark.nav li > a:active:hover, .dropdown-container > .dropdown li > a:active:hover, .alert a:active {
+/* line 81, ../scss/modules/type/_themes.scss */
+nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover, .alert a:hover {
+  color: #e2e2e2;
+}
+/* line 82, ../scss/modules/type/_themes.scss */
+nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover, .alert a:focus {
+  color: #e2e2e2;
+}
+/* line 83, ../scss/modules/type/_themes.scss */
+nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover, .alert a:focus {
   color: #e2e2e2;
 }
 
-/* line 120, ../scss/modules/type/_themes.scss */
+/* line 125, ../scss/modules/type/_themes.scss */
 body pre, body .pre {
   color: #363636;
 }
-/* line 124, ../scss/modules/type/_themes.scss */
+/* line 129, ../scss/modules/type/_themes.scss */
 body code, body .code {
   color: #363636;
   padding: 0.25rem 0.5rem;
@@ -4227,7 +4243,7 @@ body code, body .code {
   -o-border-radius: 0.25rem;
   border-radius: 0.25rem;
 }
-/* line 135, ../scss/modules/type/_themes.scss */
+/* line 140, ../scss/modules/type/_themes.scss */
 body kbd, body kbd.light, body .kbd, body .kbd.light {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #363636;
@@ -4241,35 +4257,35 @@ body kbd, body kbd.light, body .kbd, body .kbd.light {
   -o-border-radius: 0.25rem;
   border-radius: 0.25rem;
 }
-/* line 148, ../scss/modules/type/_themes.scss */
+/* line 153, ../scss/modules/type/_themes.scss */
 body kbd.dark, body .kbd.dark {
   color: #efefef;
   background: #505050;
   border-color: #363636;
 }
-/* line 176, ../scss/modules/type/_themes.scss */
+/* line 181, ../scss/modules/type/_themes.scss */
 blockquote, blockquote.left {
   border-style: solid;
   border-width: 0;
   border-left-width: 1px;
 }
-/* line 182, ../scss/modules/type/_themes.scss */
+/* line 187, ../scss/modules/type/_themes.scss */
 blockquote.right {
   text-align: right;
   border-left-width: 0;
   border-right-width: 1px;
 }
 
-/* line 189, ../scss/modules/type/_themes.scss */
+/* line 194, ../scss/modules/type/_themes.scss */
 blockquote {
   border-color: #525252;
   color: #525252;
 }
-/* line 193, ../scss/modules/type/_themes.scss */
+/* line 198, ../scss/modules/type/_themes.scss */
 blockquote footer {
   color: #525252;
 }
-/* line 196, ../scss/modules/type/_themes.scss */
+/* line 201, ../scss/modules/type/_themes.scss */
 blockquote footer::before {
   content: '\2014 \00A0';
 }
