--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -14,7 +14,7 @@
     'modules/_themes',
     'modules/_reset',
     'modules/_layout',
-    'modules/_media',
+    'modules/media/_module',
     'modules/grid/_module',
     'modules/_layers',
     'modules/type/_module',
@@ -24,7 +24,7 @@
     'modules/labels/_module',
     'modules/_fieldsets',
     'modules/tables/_module',
-    'modules/_state',
+    'modules/states/_module',
     'modules/panels/_module',
     'modules/animations/_module';
     /* 'modules/_tabs'; */
