--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -13,7 +13,7 @@
 		$suffix: -#{$mq};
 		@if $mq == 'all' { $suffix: ''; }
 
-		%column-#{$mq} { @include _column(); }
+		%column#{$suffix} { @include _column(); }
 
 		@for $i from 0 through $grid-columns {
 			%column-#{$i}#{$suffix} {
@@ -135,6 +135,11 @@
 			margin-left: auto; 
 			margin-right: auto;
 			float: none;
+		}
+
+		%column-gutter#{$suffix}, %columns-gutter#{$suffix} > * {
+			padding-left: $grid-column-gutter / 2;
+			padding-right: $grid-column-gutter / 2;
 		}
 	}
 }
