--- a/scss/modules/grid/_mixins.scss
+++ b/scss/modules/grid/_mixins.scss
@@ -93,6 +93,10 @@
 ) {
 	@include mq($media) {
 		width: column-width($columns, $gutter: $gutter);
+
+		@if $gutter {
+			margin-right: $gutter;
+		}
 	}
 }
 
