--- a/scss/modules/grid/_classes.scss
+++ b/scss/modules/grid/_classes.scss
@@ -17,6 +17,8 @@
 		}
 
 		.cols-gutter, .columns-gutter {
+			@extend %columns-gutter#{$suffix};
+
 			> .col-#{$i}#{$suffix} {
 				@extend %column-gutter-#{$i}#{$suffix};
 			}
