Added global module (empty)

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -11,6 +11,7 @@
     
 /* Import Modules */
 @import
+    'modules/global/_module',
     'modules/_themes',
     'modules/_reset',
     'modules/_layout',
