Fixing deprecated items

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -12,7 +12,6 @@
 /* Import Modules */
 @import
     'modules/global/_module',
-    'modules/_themes',
     'modules/_reset',
     'modules/_layout',
     'modules/media/_module',
@@ -27,7 +26,8 @@
     'modules/tables/_module',
     'modules/states/_module',
     'modules/panels/_module',
-    'modules/animations/_module';
+    'modules/animations/_module',
+    'modules/_themes';
     /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
