--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -17,12 +17,12 @@
 
 		@for $i from 0 through $grid-columns {
 			%column-#{$i}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 				@include column($i);
 			}
 
 			%column-gutter-#{$i}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 				@include column($i, $gutter: $grid-column-gutter);
 			}
 
@@ -70,12 +70,12 @@
 			}
 
 			%column-offset-#{$i}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 				margin-left: column-offset-width($i);
 			}
 
 			%column-gutter-offset-#{$i}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 				margin-left: column-offset-width($i, $gutter: $grid-column-gutter);
 			}
 
@@ -108,7 +108,7 @@
 			$denominator: $i + 1;
 
 			%column-#{$fraction}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 
 				@if ($grid-columns / $denominator) == round($grid-columns / $denominator) {
 					@extend %column-#{$grid-columns / $denominator}#{$suffix};
@@ -130,7 +130,7 @@
 			}
 
 			%column-offset-#{$fraction}#{$suffix} {
-				@extend %column-#{$mq};
+				@extend %column#{$suffix};
 				
 				@if ($grid-columns / $denominator) == round($grid-columns / $denominator) {
 					@extend %column-offset-#{$grid-columns / $denominator}#{$suffix};
@@ -242,7 +242,7 @@
 			$denominator: $i + 1;
 
 			%row-#{$fraction}#{$suffix} {
-				@extend %row-#{$mq};
+				@extend %row#{$suffix};
 
 				@if ($grid-rows / $denominator) == round($grid-rows / $denominator) {
 					@extend %row-#{$grid-rows / $denominator}#{$suffix};
