--- a/scss/modules/type/_components.scss
+++ b/scss/modules/type/_components.scss
@@ -49,7 +49,7 @@
 }
 
 %heading-inline {
-	@extend %inline-block;
+    display: inline-block;
 	margin-bottom: 0;
 	margin-top: 0;
 }
@@ -68,7 +68,7 @@
 %hgroup {
 	margin-bottom: $hgroup-margin-bottom;
 
-	> h1, > h2, > h3, > h4, > h5, > h6 {
+	%heading {
 		margin-bottom: 0;
 	}
 }
