--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -38,7 +38,7 @@ input, button, textarea, select {
 }
 
 /* line 123, ../scss/modules/_layout.scss */
-.inline-block-all > *, .valign-center-all > *, .tabs ul li > a > *, nav.horizontal ul li > a > *, .nav.horizontal ul li > a > *, nav ul li > a > *, .nav ul li > a > *, nav.vertical ul li > a > *, .nav.vertical ul li > a > *, .dropdown-container ul li > a > *, .inline-block, h1.inline, .h1.inline, h2.inline, .h2.inline, h3.inline, .h3.inline, h4.inline, .h4.inline, textarea.inline,
+.inline-block-all > *, .valign-center-all > *, .tabs ul li > a > *, nav.horizontal ul li > a > *, .nav.horizontal ul li > a > *, nav ul li > a > *, .nav ul li > a > *, nav.vertical ul li > a > *, .nav.vertical ul li > a > *, .dropdown-container ul li > a > *, .inline-block, textarea.inline,
 input.inline {
   display: inline-block;
   width: auto;
@@ -5111,6 +5111,7 @@ h1:only-child, .h1:only-child, h2:only-child, .h2:only-child, h3:only-child, .h3
 
 /* line 51, ../scss/modules/type/_components.scss */
 h1.inline, .h1.inline, h2.inline, .h2.inline, h3.inline, .h3.inline, h4.inline, .h4.inline {
+  display: inline-block;
   margin-bottom: 0;
   margin-top: 0;
 }
@@ -5132,7 +5133,7 @@ hgroup, .hgroup {
   margin-bottom: 1rem;
 }
 /* line 71, ../scss/modules/type/_components.scss */
-hgroup > h1, .hgroup > h1, hgroup > h2, .hgroup > h2, hgroup > h3, .hgroup > h3, hgroup > h4, .hgroup > h4, hgroup > h5, .hgroup > h5, hgroup > h6, .hgroup > h6 {
+hgroup h1, .hgroup h1, hgroup .h1, .hgroup .h1, hgroup h2, .hgroup h2, hgroup .h2, .hgroup .h2, hgroup h3, .hgroup h3, hgroup .h3, .hgroup .h3, hgroup h4, .hgroup h4, hgroup .h4, .hgroup .h4, hgroup h5, .hgroup h5, hgroup .h5, .hgroup .h5, hgroup h6, .hgroup h6, hgroup .h6, .hgroup .h6 {
   margin-bottom: 0;
 }
 
@@ -5454,71 +5455,62 @@ dl dd {
   margin-bottom: 0.5rem;
 }
 
-/* line 39, ../scss/modules/type/_themes.scss */
-body h6, body .h6 {
-  text-transform: uppercase;
-}
-
-/* line 44, ../scss/modules/type/_themes.scss */
-body h1, body h2, body h3, body h4, body h5, body h6, body .h1, body .h2, body .h3, body .h4, body .h5, body .h6 {
+/* line 17, ../scss/modules/type/_themes.scss */
+body {
   color: #363636;
 }
-/* line 47, ../scss/modules/type/_themes.scss */
-body h1.sub, body h1.subheading, body h1 > small, body h1 > .small, body h2.sub, body h2.subheading, body h2 > small, body h2 > .small, body h3.sub, body h3.subheading, body h3 > small, body h3 > .small, body h4.sub, body h4.subheading, body h4 > small, body h4 > .small, body h5.sub, body h5.subheading, body h5 > small, body h5 > .small, body h6.sub, body h6.subheading, body h6 > small, body h6 > .small, body .h1.sub, body .h1.subheading, body .h1 > small, body .h1 > .small, body .h2.sub, body .h2.subheading, body .h2 > small, body .h2 > .small, body .h3.sub, body .h3.subheading, body .h3 > small, body .h3 > .small, body .h4.sub, body .h4.subheading, body .h4 > small, body .h4 > .small, body .h5.sub, body .h5.subheading, body .h5 > small, body .h5 > .small, body .h6.sub, body .h6.subheading, body .h6 > small, body .h6 > .small {
+/* line 20, ../scss/modules/type/_themes.scss */
+body p, body ul, body ol, body dl {
+  color: #363636;
+}
+/* line 49, ../scss/modules/type/_themes.scss */
+body h1, body .h1, body h2, body .h2, body h3, body .h3, body h4, body .h4, body h5, body .h5, body h6, body .h6, body.h1, body.h2, body.h3, body.h4, body.h5, body.h6 {
+  color: #363636;
+}
+/* line 53, ../scss/modules/type/_themes.scss */
+body h1.sub, body h1.subheading, body .h1.sub, body .h1.subheading, body h2.sub, body h2.subheading, body .h2.sub, body .h2.subheading, body h3.sub, body h3.subheading, body .h3.sub, body .h3.subheading, body h4.sub, body h4.subheading, body .h4.sub, body .h4.subheading, body h1 > small, body h1 > .small, body .h1 > small, body .h1 > .small, body h2 > small, body h2 > .small, body .h2 > small, body .h2 > .small, body h3 > small, body h3 > .small, body .h3 > small, body .h3 > .small, body h4 > small, body h4 > .small, body .h4 > small, body .h4 > .small, body.h1.sub, body.h1.subheading, body.h2.sub, body.h2.subheading, body.h3.sub, body.h3.subheading, body.h4.sub, body.h4.subheading, h1 > body.small, .h1 > body.small, h2 > body.small, .h2 > body.small, h3 > body.small, .h3 > body.small, h4 > body.small, .h4 > body.small {
   color: #525252;
 }
-/* line 86, ../scss/modules/type/_themes.scss */
-a {
-  text-decoration: underline;
-}
-/* line 89, ../scss/modules/type/_themes.scss */
-a:hover {
-  text-decoration: underline;
-}
-/* line 93, ../scss/modules/type/_themes.scss */
-a > img {
-  border: none;
-}
-
-/* line 99, ../scss/modules/type/_themes.scss */
-a, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, button.link, .link.button, input.link[type=button], input.link[type=submit], .light.alert a, .warning.alert a {
+/* line 109, ../scss/modules/type/_themes.scss */
+button.link a, .link.button a, input.link[type=button] a, input.link[type=submit] a, .light.alert a a, .warning.alert a a, a.link.button, .light.alert a, .warning.alert a, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, body a {
   color: #024959;
+  background: green;
 }
-/* line 81, ../scss/modules/type/_themes.scss */
-a:hover, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, button.link:hover, .link.button:hover, input.link[type=button]:hover, input.link[type=submit]:hover, .light.alert a:hover, .warning.alert a:hover {
+/* line 90, ../scss/modules/type/_themes.scss */
+button.link a:hover, .link.button a:hover, input.link[type=button] a:hover, input.link[type=submit] a:hover, .light.alert a a:hover, .warning.alert a a:hover, a.link.button:hover, .light.alert a:hover, .warning.alert a:hover, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, body a:hover {
   color: #013540;
 }
-/* line 82, ../scss/modules/type/_themes.scss */
-a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, button.link:focus, .link.button:focus, input.link[type=button]:focus, input.link[type=submit]:focus, .light.alert a:focus, .warning.alert a:focus {
+/* line 91, ../scss/modules/type/_themes.scss */
+button.link a:focus, .link.button a:focus, input.link[type=button] a:focus, input.link[type=submit] a:focus, .light.alert a a:focus, .warning.alert a a:focus, a.link.button:focus, .light.alert a:focus, .warning.alert a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, body a:focus {
   color: #013540;
 }
-/* line 83, ../scss/modules/type/_themes.scss */
-a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, button.link:focus, .link.button:focus, input.link[type=button]:focus, input.link[type=submit]:focus, .light.alert a:focus, .warning.alert a:focus {
+/* line 92, ../scss/modules/type/_themes.scss */
+button.link a:focus, .link.button a:focus, input.link[type=button] a:focus, input.link[type=submit] a:focus, .light.alert a a:focus, .warning.alert a a:focus, a.link.button:focus, .light.alert a:focus, .warning.alert a:focus, nav li > a:focus:hover, .nav li > a:focus:hover, nav.light li > a:focus:hover, .light.dropdown-container > .dropdown li > a:focus:hover, body a:focus {
   color: #013540;
 }
-/* line 104, ../scss/modules/type/_themes.scss */
-nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover, .alert a, .primary.alert a, .secondary.alert a, .dark.alert a, .success.alert a, .failure.alert a {
+/* line 117, ../scss/modules/type/_themes.scss */
+.alert a a, .primary.alert a a, .secondary.alert a a, .dark.alert a a, .success.alert a a, .failure.alert a a, .alert a, .primary.alert a, .secondary.alert a, .dark.alert a, .success.alert a, .failure.alert a, nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover {
   color: #efefef;
 }
-/* line 81, ../scss/modules/type/_themes.scss */
-nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover, .alert a:hover {
+/* line 90, ../scss/modules/type/_themes.scss */
+.alert a a:hover, .alert a:hover, nav.primary li > a:hover, .primary.nav li > a:hover, nav.secondary li > a:hover, .secondary.nav li > a:hover, nav.dark li > a:hover, .dark.nav li > a:hover, .dropdown-container > .dropdown li > a:hover, .primary.dropdown-container > .dropdown li > a:hover, .secondary.dropdown-container > .dropdown li > a:hover, .dark.dropdown-container > .dropdown li > a:hover {
   color: #e2e2e2;
 }
-/* line 82, ../scss/modules/type/_themes.scss */
-nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover, .alert a:focus {
+/* line 91, ../scss/modules/type/_themes.scss */
+.alert a a:focus, .alert a:focus, nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover {
   color: #e2e2e2;
 }
-/* line 83, ../scss/modules/type/_themes.scss */
-nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover, .alert a:focus {
+/* line 92, ../scss/modules/type/_themes.scss */
+.alert a a:focus, .alert a:focus, nav.primary li > a:focus:hover, .primary.nav li > a:focus:hover, nav.secondary li > a:focus:hover, .secondary.nav li > a:focus:hover, nav.dark li > a:focus:hover, .dark.nav li > a:focus:hover, .dropdown-container > .dropdown li > a:focus:hover {
   color: #e2e2e2;
 }
 
-/* line 125, ../scss/modules/type/_themes.scss */
-body pre, body .pre {
+/* line 143, ../scss/modules/type/_themes.scss */
+body pre, body .pre, body.pre {
   color: #363636;
 }
-/* line 129, ../scss/modules/type/_themes.scss */
-body code, body .code {
+/* line 147, ../scss/modules/type/_themes.scss */
+body .pre code, .pre body code, body .pre .code, .pre body .code, body code, body .code, .pre body.code, body.code {
   color: #363636;
   padding: 0.25rem 0.5rem;
   background: #efefef;
@@ -5528,8 +5520,8 @@ body code, body .code {
   -o-border-radius: 0.25rem;
   border-radius: 0.25rem;
 }
-/* line 140, ../scss/modules/type/_themes.scss */
-body kbd, body kbd.light, body .kbd, body .kbd.light {
+/* line 158, ../scss/modules/type/_themes.scss */
+body kbd, body .kbd, body kbd.light, body .light.kbd, body.kbd, body.light.kbd {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #363636;
   padding: 0.25rem 0.5rem;
@@ -5542,36 +5534,36 @@ body kbd, body kbd.light, body .kbd, body .kbd.light {
   -o-border-radius: 0.25rem;
   border-radius: 0.25rem;
 }
-/* line 153, ../scss/modules/type/_themes.scss */
-body kbd.dark, body .kbd.dark {
+/* line 171, ../scss/modules/type/_themes.scss */
+body kbd.dark, body .dark.kbd, body.dark.kbd {
   color: #efefef;
   background: #505050;
   border-color: #363636;
 }
-/* line 181, ../scss/modules/type/_themes.scss */
+/* line 203, ../scss/modules/type/_themes.scss */
 blockquote, blockquote.left {
   border-style: solid;
   border-width: 0;
   border-left-width: 1px;
 }
-/* line 187, ../scss/modules/type/_themes.scss */
+/* line 209, ../scss/modules/type/_themes.scss */
 blockquote.right {
   text-align: right;
   border-left-width: 0;
   border-right-width: 1px;
 }
 
-/* line 194, ../scss/modules/type/_themes.scss */
-blockquote {
+/* line 218, ../scss/modules/type/_themes.scss */
+blockquote, body blockquote {
   border-color: #525252;
   color: #525252;
 }
-/* line 198, ../scss/modules/type/_themes.scss */
-blockquote footer {
+/* line 222, ../scss/modules/type/_themes.scss */
+blockquote footer, body blockquote footer {
   color: #525252;
 }
-/* line 201, ../scss/modules/type/_themes.scss */
-blockquote footer::before {
+/* line 225, ../scss/modules/type/_themes.scss */
+blockquote footer::before, body blockquote footer::before {
   content: '\2014 \00A0';
 }
 
@@ -5910,7 +5902,7 @@ nav.dark li > a:hover, .dark.nav li > a:hover {
 }
 
 /* line 5, ../scss/modules/forms/_components.scss */
-a, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, button.link, .link.button, input.link[type=button], input.link[type=submit], .light.alert a, .warning.alert a, textarea,
+button.link a, .link.button a, input.link[type=button] a, input.link[type=submit] a, .light.alert a a, .warning.alert a a, a.link.button, .light.alert a, .warning.alert a, nav li > a:hover, .nav li > a:hover, nav.light li > a:hover, .light.nav li > a:hover, .light.dropdown-container > .dropdown li > a:hover, body a, textarea,
 input {
   -webkit-transition-property: all;
   -moz-transition-property: all;
@@ -8061,128 +8053,19 @@ table.hover tr:hover {
   }
 }
 
-/* line 34, ../scss/modules/_themes.scss */
-.theme-primary {
-  background-color: #024959;
-  color: #efefef;
+/* line 19, ../scss/modules/themes/_mixins.scss */
+.f-light .foo, body .foo {
+  background-color: orange;
 }
-/* line 21, ../scss/modules/_themes.scss */
-.theme-primary a {
-  color: #efefef;
-}
-/* line 23, ../scss/modules/_themes.scss */
-.theme-primary a:hover {
-  color: white;
-}
-/* line 26, ../scss/modules/_themes.scss */
-.theme-primary h1, .theme-primary h2, .theme-primary h3, .theme-primary h4, .theme-primary h5, .theme-primary h6 {
-  color: #efefef;
+/* line 25, ../scss/modules/themes/_mixins.scss */
+.f-dark .foo {
+  background-color: teal;
 }
 
-/* line 35, ../scss/modules/_themes.scss */
-.theme-secondary {
-  background-color: #e74c30;
-  color: #efefef;
-}
-/* line 21, ../scss/modules/_themes.scss */
-.theme-secondary a {
-  color: #efefef;
-}
-/* line 23, ../scss/modules/_themes.scss */
-.theme-secondary a:hover {
-  color: white;
-}
-/* line 26, ../scss/modules/_themes.scss */
-.theme-secondary h1, .theme-secondary h2, .theme-secondary h3, .theme-secondary h4, .theme-secondary h5, .theme-secondary h6 {
-  color: #efefef;
-}
-
-/* line 36, ../scss/modules/_themes.scss */
-.theme-light {
-  background-color: #efefef;
-  color: #363636;
-}
-/* line 21, ../scss/modules/_themes.scss */
-.theme-light a {
-  color: #024959;
-}
-/* line 23, ../scss/modules/_themes.scss */
-.theme-light a:hover {
-  color: #03667c;
-}
-/* line 26, ../scss/modules/_themes.scss */
-.theme-light h1, .theme-light h2, .theme-light h3, .theme-light h4, .theme-light h5, .theme-light h6 {
-  color: #363636;
-}
-
-/* line 37, ../scss/modules/_themes.scss */
-.theme-dark {
-  background-color: #363636;
-  color: #efefef;
-}
-/* line 21, ../scss/modules/_themes.scss */
-.theme-dark a {
-  color: #efefef;
-}
-/* line 23, ../scss/modules/_themes.scss */
-.theme-dark a:hover {
-  color: white;
-}
-/* line 26, ../scss/modules/_themes.scss */
-.theme-dark h1, .theme-dark h2, .theme-dark h3, .theme-dark h4, .theme-dark h5, .theme-dark h6 {
-  color: #efefef;
-}
-
-/* line 44, ../scss/modules/_themes.scss */
-.color-primary {
-  color: #024959;
-}
-
-/* line 45, ../scss/modules/_themes.scss */
-.color-secondary {
-  color: #e74c30;
-}
-
-/* line 46, ../scss/modules/_themes.scss */
-.color-light {
-  color: #efefef;
-}
-
-/* line 47, ../scss/modules/_themes.scss */
-.color-gray {
-  color: #525252;
-}
-
-/* line 48, ../scss/modules/_themes.scss */
-.color-dark {
-  color: #363636;
-}
-
-/* line 56, ../scss/modules/_themes.scss */
-.border-primary, .border-secondary, .border-light, .border-dark, .border {
-  border-style: solid;
-  border-width: 1px;
-  border-color: #525252;
-}
-
-/* line 62, ../scss/modules/_themes.scss */
-.border-primary {
-  border-color: #024959;
-}
-
-/* line 63, ../scss/modules/_themes.scss */
-.border-secondary {
-  border-color: #e74c30;
-}
-
-/* line 64, ../scss/modules/_themes.scss */
-.border-light {
-  border-color: #efefef;
-}
-
-/* line 65, ../scss/modules/_themes.scss */
-.border-dark {
-  border-color: #363636;
+/* line 33, ../scss/modules/themes/_mixins.scss */
+.foo {
+  border: 2px solid red;
+  padding: 10px;
 }
 
 /* 'modules/_tabs'; */
